Change menu to collapse and fix subscribe field and button for mobile

--- a/assets/custom-styles.scss
+++ b/assets/custom-styles.scss
@@ -50,5 +50,15 @@ $bigger-elements-margin-offset: -5%;
   .max-width-425rem {
     max-width: 42.5rem;
   }
+
+  .rounded-lg-start {
+    border-top-right-radius: 0rem !important;
+    border-bottom-right-radius: 0rem !important;
+  }
+
+  .rounded-lg-end {
+    border-top-left-radius: 0rem !important;
+    border-bottom-left-radius: 0rem !important;
+  }
   
 }
